Suppress javafx native access warnings in test jvm args